 cnp-deny-malware-tntbotinger-communication-sadspdn.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-deny-malware-tntbotinger-communication"-6a0ntmd
  namespace: kube-system
spec:
  description: "Policy to deny tntbotinger communication over port 6697, 51982 and 1982"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 6c4b5bcf94
      kubearmor-app: kubearmor
      pod-template-generation: 1
